--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,89 @@
-# Compiled class file
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+out/
+target/
+
+# Compiled files
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
+
+# Logs and databases
+log/
+logs/
+*.log
+*.log.*
+*.sqlite
+*.db
+*.h2.db
+
+# User-specific files
+*.suo
+*.user
+*.sln.docstates
+
+# Build directories
+bin/
+build/
+dist/
+deploy/
+.gradle/
+.mvn/
+.vscode/
+target/
+out/
+gen/
+out/
+
+# OtherS
+.DS_Store
+Thumbs.db
+.desktop.ini
+*.swp
+*.bak
+*.tmp
+*.tmp.*
+*~
