--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>allure-testng</artifactId>
             <version>2.23.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-selenide -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-selenide</artifactId>
+            <version>2.23.0</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.docker-java</groupId>
             <artifactId>docker-java</artifactId>
@@ -104,7 +111,7 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/suite.xml</suiteXmlFile>
+                        <suiteXmlFile>src/test/resources/CapstoneProject.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
