--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,15 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
-
-# IntelliJ IDEA
 .idea/
-*.iml
-*.iws
 out/
-target/
 
-# Compiled files
+### Compiled files
 *.class
 *.jar
 *.war
 *.ear
 hs_err_pid*
 
-# Logs and databases
+### Logs and databases
 log/
 logs/
 *.log
@@ -60,31 +18,26 @@ logs/
 *.db
 *.h2.db
 
-# User-specific files
+### User-specific files
 *.suo
 *.user
 *.sln.docstates
 
-# Build directories
+### Build directories
 bin/
-build/
 dist/
 deploy/
 .gradle/
 .mvn/
-.vscode/
-target/
-out/
 gen/
-out/
 
-# OtherS
-.DS_Store
+### OtherS
 Thumbs.db
-.desktop.ini
+.DS_Store
 *.swp
 *.bak
 *.tmp
 *.tmp.*
 *~
 /.temp
+/allure-results/
